--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pvorg",
   "version": "1.0.0",
-  "description": "An Electron application with React",
+  "description": "A video organizer and random video selector with genre/actor tagging and slideshows",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://www.electronjs.org",
+  "author": "Prasanth P <prasanthxyz@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^2.0.0"
+    "@electron-toolkit/utils": "^2.0.0",
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
