--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pvorg",
   "version": "1.0.0",
-  "description": "A video organizer and random video selector with genre/actor tagging and slideshows",
+  "description": "A video organizer and random video selector with genre/gallery tagging and slideshows",
   "main": "./out/main/index.js",
   "author": "Prasanth P <prasanthxyz@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,9 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "sequelize": "^6.35.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
