--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "pg-hstore": "^2.3.4",
     "react-router-dom": "^6.19.0",
     "sequelize": "^6.35.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "video.js": "^8.6.1",
+    "videojs-hotkeys": "^0.2.28"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
