--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.5",
     "pg-hstore": "^2.3.4",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.19.0",
     "sequelize": "^6.35.0",
     "sqlite3": "^5.1.6",
