--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "build:linux": "npm run build && electron-builder --linux --config"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.5",
     "pg-hstore": "^2.3.4",
+    "react-bootstrap": "^2.9.1",
+    "react-bootstrap-icons": "^1.10.3",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.19.0",
     "sequelize": "^6.35.0",
