--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg-hstore": "^2.3.4",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
+    "react-hotkeys-hook": "^4.4.1",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.19.0",
     "sequelize": "^6.35.0",
