--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:win": "npm run build && electron-builder --win --config",
     "build:mac": "npm run build && electron-builder --mac --config",
     "build:linux": "npm run build && electron-builder --linux --config",
-    "release": "electron-builder"
+    "release": "npm run build && electron-builder"
   },
   "build": {
     "appId": "com.wordpress.prasanthxyz.pvorg",
