--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,4 +1,4 @@
-appId: com.pvorg.app
+appId: com.wordpress.prasanthxyz.pvorg
 productName: pvorg
 directories:
   buildResources: build
@@ -38,5 +38,5 @@ appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
 publish:
-  provider: generic
-  url: https://example.com/auto-updates
+  provider: github
+  url: https://github.com/prasanthxyz/P-Video-Organizer
