--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pvorg",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A video organizer and random video selector with genre/gallery tagging and slideshows",
   "main": "./out/main/index.js",
   "author": "Prasanth P <prasanthxyz@gmail.com>",
@@ -20,22 +20,65 @@
   "build": {
     "appId": "com.wordpress.prasanthxyz.pvorg",
     "productName": "P Video Organizer",
+    "directories": {
+      "buildResources": "build"
+    },
+    "files": [
+      "!**/.vscode/*",
+      "!src/*",
+      "!electron.vite.config.{js,ts,mjs,cjs}",
+      "!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}",
+      "!{.env,.env.*,.npmrc,pnpm-lock.yaml}"
+    ],
+    "asarUnpack": [
+      "resources/**"
+    ],
+    "nsis": {
+      "artifactName": "${name}-${version}-setup.${ext}",
+      "shortcutName": "${productName}",
+      "uninstallDisplayName": "${productName}",
+      "createDesktopShortcut": "always"
+    },
+    "mac": {
+      "entitlementsInherit": "build/entitlements.mac.plist",
+      "extendInfo": [
+        {
+          "NSCameraUsageDescription": "Application requests access to the device's camera."
+        },
+        {
+          "NSMicrophoneUsageDescription": "Application requests access to the device's microphone."
+        },
+        {
+          "NSDocumentsFolderUsageDescription": "Application requests access to the user's Documents folder."
+        },
+        {
+          "NSDownloadsFolderUsageDescription": "Application requests access to the user's Downloads folder."
+        }
+      ],
+      "notarize": false
+    },
+    "dmg": {
+      "artifactName": "${name}-${version}.${ext}"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "snap",
+        "deb"
+      ],
+      "maintainer": "prasanthxyz.wordpress.com",
+      "category": "Video"
+    },
+    "appImage": {
+      "artifactName": "${name}-${version}.${ext}"
+    },
     "publish": [
       {
         "provider": "github",
         "owner": "prasanthxyz",
         "repo": "P-Video-Organizer"
       }
-    ],
-    "win": {
-      "target": "nsis",
-      "publish": [
-        "github"
-      ]
-    },
-    "directories": {
-      "output": "dist"
-    }
+    ]
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
