--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "bootstrap": "^5.3.2",
+    "command-exists": "^1.2.9",
     "electron-updater": "^6.1.7",
     "framer-motion": "^10.16.5",
     "pg-hstore": "^2.3.4",
