--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "bootstrap": "^5.3.2",
     "command-exists": "^1.2.9",
     "electron-updater": "^6.1.7",
+    "ffprobe": "^1.1.2",
+    "ffprobe-static": "^3.1.0",
     "framer-motion": "^10.16.5",
     "pg-hstore": "^2.3.4",
     "react-bootstrap": "^2.9.1",
