--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pvorg",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "A video organizer and random video selector with genre/gallery tagging and slideshows",
   "main": "./out/main/index.js",
   "author": "Prasanth P <prasanthxyz@gmail.com>",
@@ -95,6 +95,7 @@
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-hotkeys-hook": "^4.4.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
     "sequelize": "^6.35.0",
     "sqlite3": "^5.1.6",
