--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-hotkeys-hook": "^4.4.1",
+    "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
     "sequelize": "^6.35.0",
