Remove bootstrap and switch to custom css (#2)
- Remove bootstrap and bootstrap-icons
- Add custom css
- Use react-icons package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pvorg",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "A video organizer and random video selector with genre/gallery tagging and slideshows",
   "main": "./out/main/index.js",
   "author": "Prasanth P <prasanthxyz@gmail.com>",
@@ -85,16 +85,14 @@
     "@electron-toolkit/utils": "^2.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "bootstrap": "^5.3.2",
     "command-exists": "^1.2.9",
     "electron-updater": "^6.1.7",
     "ffprobe": "^1.1.2",
     "ffprobe-static": "^3.1.0",
     "framer-motion": "^10.16.5",
     "pg-hstore": "^2.3.4",
-    "react-bootstrap": "^2.9.1",
-    "react-bootstrap-icons": "^1.10.3",
     "react-hotkeys-hook": "^4.4.1",
+    "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
     "sequelize": "^6.35.0",
