--- a/package.json
+++ b/package.json
@@ -23,15 +23,13 @@
     "directories": {
       "buildResources": "build"
     },
+    "asar": false,
     "files": [
       "!**/.vscode/*",
       "!src/*",
       "!electron.vite.config.{js,ts,mjs,cjs}",
       "!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}",
       "!{.env,.env.*,.npmrc,pnpm-lock.yaml}"
-    ],
-    "asarUnpack": [
-      "resources/**"
     ],
     "nsis": {
       "artifactName": "${name}-${version}-setup.${ext}",
