--- a/package.json
+++ b/package.json
@@ -87,9 +87,9 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "rsuite": "^5.55.1",
-    "sequelize": "^6.37.1",
     "video.js": "^8.10.0",
-    "videojs-hotkeys": "^0.2.28"
+    "videojs-hotkeys": "^0.2.28",
+    "yaml": "^2.4.1"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
@@ -147,7 +147,6 @@
     "rimraf": "^5.0.1",
     "sass": "^1.67.0",
     "sass-loader": "^13.3.2",
-    "sqlite3": "5.1.6",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-jest": "^29.1.1",
