--- a/release/app/package.json
+++ b/release/app/package.json
@@ -10,8 +10,5 @@
     "postinstall": "npm run rebuild && npm run link-modules",
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
-  "dependencies": {
-    "sequelize": "^6.37.1",
-    "sqlite3": "5.1.6"
-  }
+  "dependencies": {}
 }
