--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "electron-updater": "^6.1.7",
     "ffprobe": "^1.1.2",
     "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "koa": "^2.15.3",
+    "koa-bodyparser": "^4.4.1",
+    "koa-router": "^12.0.1",
     "react-hotkeys-hook": "^4.5.0",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
@@ -44,6 +48,10 @@
     "@types/command-exists": "^1.2.3",
     "@types/ffprobe": "^1.1.8",
     "@types/ffprobe-static": "^2.0.3",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/koa": "^2.15.0",
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-router": "^7.4.8",
     "@types/lodash": "^4.17.0",
     "@types/node": "^18.19.9",
     "@types/react": "^18.2.48",
