--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "react-hotkeys-hook": "^4.5.0",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
@@ -54,6 +55,7 @@
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-router": "^7.4.8",
     "@types/lodash": "^4.17.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^18.19.9",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
